New AS5048 Driver
-made a new driver specifically for the AS5048A that inherits the simpleFOC's Sensor class like the other MagneticSPI classes, but adds in diagnostics for error flags and diagnostic warnings.   The driver needs some cleanup but is good enough for now
-fixed spi phase setting being incorrect, now we read the full resolution of sensor data
-increased current gain to 80V/V
-changed control gains, tuning needs a lot more work

--- a/software/pendulum_PIO/.vscode/settings.json
+++ b/software/pendulum_PIO/.vscode/settings.json
@@ -13,6 +13,9 @@
         "utility": "cpp",
         "random": "cpp",
         "numbers": "cpp",
-        "streambuf": "cpp"
+        "streambuf": "cpp",
+        "compare": "cpp",
+        "iosfwd": "cpp",
+        "limits": "cpp"
     }
 }
