--- a/software/pendulum_PIO/platformio.ini
+++ b/software/pendulum_PIO/platformio.ini
@@ -24,6 +24,7 @@ board = genericSTM32F405RG
 
 build_flags = 
 	-D HAL_CAN_MODULE_ENABLED
+    ;-O0 ; disable optimization to help debugging
 
 framework = arduino
 
@@ -34,8 +35,9 @@ upload_protocol = stlink
 lib_deps = 
     https://github.com/pazi88/STM32_CAN.git
     
-    ; We're no longer using this as a public library dependency 
+    ; We're no longer using simpleFOC as a public library dependency 
     ; since we need to modify this library and I don't 
-    ; want the changes to be overwritten by PlatformIO in the future
+    ; want the changes to be overwritten by the PlatformIO extension
+    ; in the future
     ;https://github.com/simplefoc/Arduino-FOC.git
 
