--- a/software/pendulum_PIO/.vscode/settings.json
+++ b/software/pendulum_PIO/.vscode/settings.json
@@ -16,6 +16,13 @@
         "streambuf": "cpp",
         "compare": "cpp",
         "iosfwd": "cpp",
-        "limits": "cpp"
+        "limits": "cpp",
+        "deque": "cpp",
+        "string": "cpp",
+        "vector": "cpp",
+        "string_view": "cpp",
+        "initializer_list": "cpp",
+        "memory": "cpp",
+        "cmath": "cpp"
     }
 }
