--- a/software/opendulum_sw_proj/justfile
+++ b/software/opendulum_sw_proj/justfile
@@ -1,6 +1,12 @@
 alias b := build
 alias c := clean
 
+
+#  GIT SUBMODULE CMD MESSAGES (entered from repository root directory)
+#  git submodule add -b "master" 'https://github.com/STMicroelectronics/stm32g4xx_hal_driver.git' 'software/opendulum_sw_proj/source/vendor/STM32G4xx_HAL_Driver'
+#  git submodule add -b "master" 'https://github.com/STMicroelectronics/cmsis_device_g4.git' 'software/opendulum_sw_proj/source/vendor/cmsis_device_g4'
+
+
 set shell := ["powershell.exe", "/c"]
 
 build_folder_path := absolute_path('build')
